<resources>
    <string name="app_name">RouteWise</string>
    <string name="ok">OK</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reset_text1">For verification we will send you a code to authorize your password reset request.</string>
    <string name="reset_text2">Please choose a contact method to receive the authorization code.</string>
    <string name="geo_fence_enter">Fence Entered</string>
    <string name="geo_fence_exit">Fence Exited</string>
    <string name="geo_fence_transition">Fence Transition</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="my_trips">My Trips</string>
    <string name="plan_trip">Plan a Trip</string>
    <string name="log_out">Log Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="keep_me_logged_in">Keep Me Logged In</string>
    <string name="tnedicca">TNEDICCA<sup><small>®</small></sup></string>
    <string name="registered_mark"><sup><small>®</small></sup></string>
    <string name="login_error">Incorrect Login or Password</string>
    <string name="invalid_email_error">Invalid Email</string>
    <string name="user_unavailable">Email id not registered</string>
    <string name="activation_pending">Activation Pending</string>
    <string name="user_unsubscribed">Unsubscribed from the services</string>
    <string name="login_failed">Login Failed</string>
    <string name="wrong_password">Invalid password</string>
    <string name="info_title1">Route Risk are determined by the following factors:</string>
    <string name="info_factor1">• Choice of Routes</string>
    <string name="info_factor2">• Time of the Day</string>
    <string name="info_factor3">• Day of the Week</string>
    <string name="info_factor4">• Month</string>
    <string name="info_factor5">• Weather</string>
    <string name="pass_rule1">• Minimum of 8 characters</string>
    <string name="pass_rule2">• At least 1 number</string>
    <string name="pass_rule3">• At least 1 uppercase</string>
    <string name="pass_rule4">• At least 1 special character</string>
    <string name="info_title2">Scores reset every 180 days</string>
    <string name="info_title3">Tips to improve your driving score:</string>
    <string name="info_tips1">Use the Plan a Trip feature to select safer route choices</string>
    <string name="info_tips2">Use a suggest a safer Route feature to get instant feedback on safer choices</string>
    <string name="info_tips3">Avoid Texting while driving</string>
    <string name="info_tips4">Maintain safe distance with other vehicles</string>
    <string name="info_tips5">Avoid speeding</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_my_trips">My Trips</string>
    <string name="menu_plan_trip">Plan a Trip</string>
    <string name="menu_insurance">Insurance Quote</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_send_logs">Send Logs</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_delete">Delete Account</string>
    <string name="driver_of_trip">I am the driver for this trip</string>
    <string name="suggest_safe_route">Suggest Safe Route</string>
    <string name="settings_title">SETTINGS</string>
    <string name="tracking_enabled_text">Tracking Enabled</string>
    <string name="auto_enable_tracking_in">Auto Enable Tracking In:</string>
    <string name="days">Days</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="within_secs_text">within second(s) :</string>
    <string name="data_uploads_use">Data Uploads Use:</string>
    <string name="cellular_only_text">Cellular Only</string>
    <string name="wifi_only_text">Wifi Only</string>
    <string name="both_text">Both</string>
    <string name="reset_password">Reset Password</string>
    <string name="save_log">Save Log</string>
    <string name="login">LOGIN</string>
    <string name="forgot">FORGOT PASSWORD</string>
    <string name="new_password">NEW PASSWORD</string>
    <string name="registration">REGISTRATION</string>
    <string name="info">SCORES EXPLAINED</string>
    <string name="terms_and_condition">TERMS &amp; CONDITIONS</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="next">Next</string>
    <string name="searches">Searches</string>
    <string name="address">Address</string>
    <string name="font_malgun">fonts/MALGUN.TTF</string>
    <string name="font_malgun_bold">fonts/MALGUNBD.TTF</string>
    <string name="font_malgun_semi_light">fonts/MALGUNSL.TTF</string>
    <string name="approval_text">A code has been sent your email/sms. \n Please enter the code below to verify your identity.</string>
    <string name="approval_hint">Enter Authorization Code</string>
    <string name="incorrect_code_text">The code you entered is not correct. \n Please try again or request a new code.</string>
    <string name="request_new_code">Request New Code</string>
</resources>