<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/dimen_5dp" />

    <fragment
        android:id="@+id/old_password"
        android:name="com.tnedicca.routewise.fragments.FragmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:gravity="center_horizontal|center_vertical"
        tools:layout="@layout/fragment_layout" />

    <fragment
        android:id="@+id/new_password"
        android:name="com.tnedicca.routewise.fragments.FragmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center_horizontal|center_vertical"
        tools:layout="@layout/fragment_layout" />

    <fragment
        android:id="@+id/confirm_password"
        android:name="com.tnedicca.routewise.fragments.FragmentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center_horizontal|center_vertical"
        tools:layout="@layout/fragment_layout" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.tnedicca.routewise.views.CustomTextView
            android:id="@+id/rule1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dimen_15dp"
            android:text="@string/pass_rule1"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:face="@string/font_malgun_semi_light" />

        <com.tnedicca.routewise.views.CustomTextView
            android:id="@+id/rule2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rule1"
            android:layout_below="@+id/rule1"
            android:text="@string/pass_rule2"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:face="@string/font_malgun_semi_light" />

        <com.tnedicca.routewise.views.CustomTextView
            android:id="@+id/rule3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rule1"
            android:layout_below="@+id/rule2"
            android:text="@string/pass_rule3"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:face="@string/font_malgun_semi_light" />

        <com.tnedicca.routewise.views.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/rule1"
            android:layout_below="@+id/rule3"
            android:text="@string/pass_rule4"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_14sp"
            app:face="@string/font_malgun_semi_light" />
    </RelativeLayout>

    <com.tnedicca.routewise.views.CustomButton
        android:id="@+id/next_button"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:background="@drawable/login_button_shape"
        android:gravity="center"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:face="@string/font_malgun_semi_light" />

</LinearLayout>